# TUI_ProjectManager

./: Cargo.toml  Readme.md
.pman/: project_manager.pman
src/: main.rs  popups.rs  services.rs  structure.rs  ui.rs  utils.rs
src/services/: mod.rs  project_s.rs  project_service.rs  task_s.rs  task_service.rs
src/structure/: application.rs  mod.rs  project.rs  task.rs
