[package]
name = "project_manager"
version = "0.1.0"
authors = ["NicoDblc <nicolaslaniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
crossterm = "0.18.0"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
dirs = "3.0.0"
smart-default = "0.6.0"