[package]
name = "project_manager"
version = "0.1.3"
authors = ["NicoDblc <nicolaslaniel@pm.me>"]
edition = "2018"
exclude = ["Documents/*",".idea/*"]
license-file = "LICENSE"
readme = "Readme.md"
repository = "https://github.com/NicoDblc/TUI_ProjectManager"
keywords = ["todo", "project", "manager", "tui"]
description = "A TUI app that act as a per project task list."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
crossterm = "0.23.2"
tui = { version = "0.18.0", default-features = false, features = ['crossterm'] }
dirs = "4.0.0"
smart-default = "0.6.0"